--- a/www/less/pedometer.less
+++ b/www/less/pedometer.less
@@ -10,14 +10,19 @@
     font-size: 2em;
   }
   
-  .counter-wrapper {
-    width: 20%;
-    background: #FFF;
+  .counters {
+    margin: 0 auto;
     
-    .counter {
-      color: #000;
-      margin: 1em 0.5em;
-      font-size: 5em;
+    .counter-wrapper {
+      margin:     0.25em 0.5em;
+      background: #FFF;
+      display: inline-block;
+      
+      .counter {
+        color: #000;
+        margin: 0.5em 0.25em;
+        //font-size: 5em;
+      }
     }
   }
 }
