--- a/www/less/pedometer.less
+++ b/www/less/pedometer.less
@@ -1,14 +1,16 @@
 body {
-  background: #000;
+  .exercise-links {
+    list-style: none;
+  }
   
   .pedometer-wrapper {
     color: #FFF;
     text-align: center;
     
     .pedo-button button {
-      width: 90%;
+      width: 80%;
       margin: 0.5em;
-      height: 4em;
+      height: 3em;
       font-size: 2em;
     }
     
