--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -13,7 +13,7 @@
         An app designed to improve the health of Oklahomans.
     </description>
     <author email="ashinpaugh@gmail.com" href="http://moop.ly">
-        Austin Shinpaugh &amp; Jonathan Fasking
+        Austin Shinpaugh
     </author>
     <content src="index.html" />
     <access origin="*" />
