--- a/www/less/dashboard.less
+++ b/www/less/dashboard.less
@@ -1,18 +1,33 @@
 div.main-content {
   .dash-wrapper {
     .stats {
-      background: #CCC;
+      //color: rgb(246, 99, 51);
+      background: #FFF;
       margin: 0.25em 0.5em;
       text-align: center;
-      padding: 0 0 0.5em;
+      padding: 0 0 0.25em;
+      
+      h3 {
+        color: rgb(102, 189, 79);
+        margin: 0.15em 0 0;
+      }
+      
+      h5 {
+        margin: 0 0 0.15em;
+        color: #222222;
+      }
     }
     
     .utilities {
       text-align: center;
       margin-top: 1em;
       
-      .util span {
+      .util {
         color: #FFF;
+      }
+      
+      a.util:hover {
+        color: lightgreen;
       }
     }
   }
