--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -18,7 +18,7 @@
         <div class="col-xs-4">
             <a href="#/exercise" class="util">
                 <span class="fa fa-5x fa-bicycle"></span>
-                <h4>Exercise</h4>
+                <h4>Move</h4>
             </a>
         </div>
         
