--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,14 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="io.okhealth.shapeyourfuture" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
-    <preference name="loglevel" value="DEBUG" />
-    <preference name="AndroidLaunchMode" value="singleTop" />
+<widget id="io.okhealth.shapeyourfuture" version="0.0.1" xmlns="http://www.w3.org/ns/widgets">
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
     <feature name="Accelerometer">
         <param name="android-package" value="org.apache.cordova.devicemotion.AccelListener" />
     </feature>
-    <name>OK Health</name>
+    <feature name="InAppBrowser">
+        <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
+    </feature>
+    <name>Shape Your Future</name>
     <description>
         An app designed to improve the health of Oklahomans.
     </description>
@@ -17,4 +18,7 @@
     </author>
     <content src="index.html" />
     <access origin="*" />
+    <preference name="loglevel" value="DEBUG" />
+    <preference name="DisallowOverscroll" value="true" />
+    <preference name="AndroidLaunchMode" value="singleTop" />
 </widget>
