--- a/www/less/core.less
+++ b/www/less/core.less
@@ -11,10 +11,13 @@ body {
   -o-user-select: none;
   user-select: none;
   
+  a, button, img {
+    &:active, &:focus {
+      outline: 0;
+    }
+  }
+  
   div.container-fluid {
-    //position: absolute;
-    //top: 0;
-    
     div.main-content .header-wrapper {
       text-align: center;
       margin-bottom: 0.75em;
@@ -30,6 +33,17 @@ body {
         opacity: 75%;
         color: #FFF;
       }
+    }
+    
+    li.list-alt {
+      background: #efefef;
+    }
+    
+    ul.navbar-default {
+      background: none;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
     }
   }
 }
