--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -1,4 +1,5 @@
-<div class="col-md-12 dash-wrapper" ng-controller="DashboardCtrl">
+<div class="dash-wrapper" ng-controller="DashboardCtrl">
+    
     <div class="row stats well">
         <div class="col-xs-4">
             <h3 ng-bind="calories"></h3>
@@ -14,26 +15,28 @@
         </div>
     </div>
     
+    
     <div class="row utilities">
         <div class="col-xs-4">
-            <a href="#/exercise" class="util">
+            <a href="/exercise" class="util">
                 <span class="fa fa-5x fa-bicycle"></span>
                 <h4>Move</h4>
             </a>
         </div>
         
         <div class="col-xs-4">
-            <a href="#/nutrition" class="util">
+            <a href="/nutrition" class="util">
                 <span class="fa fa-5x fa-cutlery"></span>
                 <h4>Eat Better</h4>
             </a>
         </div>
         
         <div class="col-xs-4">
-            <a href="#/farmers-market" class="util">
+            <a href="/farmers-market" class="util">
                 <span class="fa fa-5x fa-map-marker"></span>
                 <h4>Market Locator</h4>
             </a>
         </div>
     </div>
+    
 </div>
