Still in the middle of developing pedo algorithm, backing up for safe keeping.

--- a/www/less/nutrition.less
+++ b/www/less/nutrition.less
@@ -25,8 +25,15 @@
     .result {
       margin: 0.5em 0;
       
-      .name-wrapper span.fa {
-        margin: 10px 0;
+      .name-wrapper {
+        &.row {
+          margin: 0 0;
+        }
+        
+        span.fa {
+          margin: 10px 0;
+          padding-right: 0;
+        }
       }
       
       .additional-details {
