--- a/www/partials/AppNav.html
+++ b/www/partials/AppNav.html
@@ -13,14 +13,14 @@
         </li>
         
         <li>
-            <a href="/dashboard">
+            <a href="#/dashboard">
                 <span class="fa fa-home"></span>
                 Dashboard
             </a>
         </li>
         
         <li>
-            <a href="/login">
+            <a href="#/login">
                 <span class="fa fa-user" ng-class="{loggedIn:$user}"></span>
                 <span ng-show="!$user">Login</span>
                 <span ng-show="$user">Logout</span>
@@ -28,7 +28,7 @@
         </li>
         
         <li>
-            <a href="/settings">
+            <a href="#/settings">
                 <span class="fa fa-cog"></span>
                 Settings
             </a>
