--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -18,21 +18,21 @@
     
     <div class="row utilities">
         <div class="col-xs-4">
-            <a href="/exercise" class="util">
+            <a href="#/exercise" class="util">
                 <span class="fa fa-5x fa-bicycle"></span>
                 <h4>Move</h4>
             </a>
         </div>
         
         <div class="col-xs-4">
-            <a href="/nutrition" class="util">
+            <a href="#/nutrition" class="util">
                 <span class="fa fa-5x fa-cutlery"></span>
                 <h4>Eat Better</h4>
             </a>
         </div>
         
         <div class="col-xs-4">
-            <a href="/farmers-market" class="util">
+            <a href="#/farmers-market" class="util">
                 <span class="fa fa-5x fa-map-marker"></span>
                 <h4>Market Locator</h4>
             </a>
