--- a/www/partials/Exercise/utility.html
+++ b/www/partials/Exercise/utility.html
@@ -59,4 +59,16 @@
             </div>
         </div>
     </div>
+    
+    <div class="calibrate-wrapper">
+        <button type="button" class="btn btn-info" ng-click="Pedometer.setCalibrate()">Calibrate</button>
+    </div>
+    
+    <table id="results">
+        <tr>
+            <th>X</th>
+            <th>Y</th>
+            <th>Z</th>
+        </tr>
+    </table>
 </div>
