--- a/www/partials/Location/exercise-links.html
+++ b/www/partials/Location/exercise-links.html
@@ -2,13 +2,13 @@
     <nav class="navbar" role="navigation">
         <ul class="nav navbar-nav exercise-links">
             <li class="row">
-                <a href="/exercise/pedometer" class="col-xs-12">
+                <a href="#/exercise/pedometer" class="col-xs-12">
                     Pedometer
                 </a>
             </li>
             
             <li class="row">
-                <a href="/exercise/calorie-counter" class="col-xs-12">
+                <a href="#/exercise/calorie-counter" class="col-xs-12">
                     Calorie Counter
                 </a>
             </li>
