--- a/www/less/app-nav.less
+++ b/www/less/app-nav.less
@@ -1,7 +1,8 @@
 div.app-nav-wrapper {
   background: #000;
   position: absolute;
-  margin-left: -50%;
+  left: -50%;
+  //margin-left: -50%;
   
   nav.app-nav {
     font-size: 1.25em;
