--- a/www/partials/Location/nutrition-links.html
+++ b/www/partials/Location/nutrition-links.html
@@ -2,13 +2,13 @@
     <nav class="navbar" role="navigation">
         <ul class="nav navbar-default exercise-links">
             <li class="row">
-                <a href="/nutrition/add-meal" class="col-xs-12">
+                <a href="#/nutrition/add-meal" class="col-xs-12">
                     Add Meal
                 </a>
             </li>
             
             <li class="row">
-                <a href="/nutrition/lookup" class="col-xs-12">
+                <a href="#/nutrition/lookup" class="col-xs-12">
                     Lookup Food
                 </a>
             </li>
