--- a/www/partials/Exercise/utility.html
+++ b/www/partials/Exercise/utility.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="col-md-3 counter-wrapper">
-            <h3 class="counter">
+            <h3 class="counter" id="tenths">
                 {{getSteps()}}
             </h3>
         </div>
