Fixed pedometer bugs. Implemented user registration through the phone. Added the Tobacco free panel.

--- a/www/less/login.less
+++ b/www/less/login.less
@@ -31,3 +31,38 @@ form.login-wrapper {
     }
   }
 }
+
+div.registration {
+  form {
+    margin-top: 1em;
+    
+    .nav-arrow {
+      top: 0;
+      width: 1.5em;
+      height: 90%;
+      position: absolute;
+      background: lightgreen;
+      
+      div {
+        color: #000;
+        margin: 4.5em -0.25em;
+      }
+      
+      &.previous-arrow {
+        left: 1em;
+      }
+      
+      &.next-arrow {
+        right: 1em;
+      }
+    }
+    
+    .page-1 {
+      margin-right: 2em;
+    }
+    
+    .page-2 {
+      margin-left: 2em;
+    }
+  }
+}
