--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -32,9 +32,9 @@
         </div>
         
         <div class="col-xs-4">
-            <a href="#/farmers-market" class="util">
-                <span class="fa fa-5x fa-map-marker"></span>
-                <h4>Market Locator</h4>
+            <a href="#/tobacco-free" class="util">
+                <span class="fa fa-5x fa-ban"></span>
+                <h4>Tobacco Free</h4>
             </a>
         </div>
     </div>
