--- a/www/partials/Login/login.html
+++ b/www/partials/Login/login.html
@@ -11,9 +11,7 @@
                 Login
             </button>
             
-            <a href="#" class="btn btn-block">
-                Register
-            </a>
+            <a class="btn btn-block btn-info" href="#/account/register">Register</a>
         </div>
     </div>
     
