--- a/www/partials/Location/nutrition-links.html
+++ b/www/partials/Location/nutrition-links.html
@@ -1,15 +1,23 @@
 <div class="link-utility-grouping" ng-controller="LocationCtrl">
     <nav class="navbar" role="navigation">
         <ul class="nav navbar-default exercise-links">
+            <!--
             <li class="row">
                 <a href="#/nutrition/add-meal" class="col-xs-12">
                     Add Meal
                 </a>
             </li>
+            -->
             
             <li class="row">
                 <a href="#/nutrition/lookup" class="col-xs-12">
                     Lookup Food
+                </a>
+            </li>
+            
+            <li class="row">
+                <a href="#/nutrition/markets" class="col-xs-12">
+                    Farmers Market
                 </a>
             </li>
         </ul>
