--- a/www/partials/Nutrition/lookup.html
+++ b/www/partials/Nutrition/lookup.html
@@ -1,4 +1,14 @@
 <div ng-controller="NutritionCtrl" class="nutrition-wrapper">
+    <div ng-hide="!userError" class="error-wrapper bg-warning">
+        <span ng-hide="userError != 1">
+            Invalid input! Please enter something into the search field.
+        </span>
+        
+        <span ng-hide="userError != 2">
+            Invalid input! Please only enter letters into the search field.
+        </span>
+    </div>
+    
     <form class="search-input">
         <label class="sr-only" for="nutrition-search">Search</label>
         <input ng-model="search" id="nutrition-search" type="text" placeholder="Lookup Ingredients - (i.e. 'chicken')" />
@@ -6,31 +16,85 @@
         <button class="well-sm" ng-click="doLookup()">Search</button>
     </form>
     
-    <div class="search-results" ng-hide="!resultSet">
-        <h4>Results</h4>
+    <div class="search-results">
+        <h4 ng-hide="!resultSet && !isSearching">Results</h4>
         
-        <ul class="results">
-            <li class="row result" ng-repeat="result in resultSet" ng-class-even="'list-alt'">
-                <div class="col-xs-12" ng-init="result.closed = true">
-                    <div class="row name-wrapper" ng-click="result.closed = !result.closed">
-                        <h4 class="col-xs-11">{{result.food_name}}</h4>
-                        <span class="col-xs-1 fa" ng-class="{'fa-arrow-right': result.closed, 'fa-arrow-down': !result.closed}"></span>
+        <ul class="results well" ng-hide="!resultSet">
+            <li class="row result" ng-repeat="food in resultSet" ng-class-even="'list-alt'">
+                <div class="col-xs-12" ng-init="food.closed = true">
+                    <div class="row name-wrapper" ng-click="food.closed = !food.closed">
+                        <h4 class="col-xs-11">{{food.food_name}}</h4>
+                        <span class="col-xs-1 fa" ng-class="{'fa-arrow-right': food.closed, 'fa-arrow-down': !food.closed}"></span>
                     </div>
                     
-                    <div class="additional-details" ng-hide="result.closed">
-                        <div class="description">
-                            {{result.food_description}}
+                    <div class="additional-details" ng-hide="food.closed">
+                        <div class="meta-wrapper row">
+                            <div class="meta col-xs-3" ng-repeat="meta in food.meta" ng-init="item = meta.split(':')">
+                                <div>{{item[0].trim()}}</div>
+                                <div>{{item[1].trim()}}</div>
+                            </div>
                         </div>
+                    </div>
+                    
+                    <div class="food-actions row" ng-hide="food.closed">
+                        <a ng-click="GetFood(food)" class="btn btn-default col-xs-6" ng-show="!food.servings">
+                            Portions and Details
+                        </a>
                         
-                        <div class="fs-link">
+                        <a ng-click="food.hide_servings = true" ng-hide="!food.servings || food.hide_servings" class="toggle btn btn-default col-xs-6" ng-hide="!food.servings">
+                            Hide Servings
+                        </a>
+                        
+                        <a ng-click="food.hide_servings = false" ng-hide="!food.servings || !food.hide_servings" class="toggle btn btn-default col-xs-6" ng-hide="!food.servings">
+                            Show Servings
+                        </a>
+                        
+                        <a href="{{food.food_url}}" class="btn btn-default col-xs-6">
                             <span class="fa fa-external-link"></span>
-                            <a href="{{result.food_url}}">
-                                Click here to find out more.
-                            </a>
-                        </div>
+                            <span>More Information</span>
+                        </a>
+                    </div>
+                    
+                    <div class="servings-wrapper" ng-hide="food.closed || food.hide_servings">
+                        <ul id="servings-{{food.food_id}}" class="servings" ng-hide="!food.servings || food.hide_servings">
+                            <li class="headings row">
+                                <div class="col-xs-5">
+                                    Portion
+                                </div>
+                                
+                                <div class="col-xs-5">
+                                    Description
+                                </div>
+                                
+                                <div class="col-xs-2">
+                                    Calories
+                                </div>
+                            </li>
+                            
+                            <li class="serving row" ng-repeat="serving in food.servings" ng-class-even="'list-alt'">
+                                <div class="col-xs-5">
+                                    <a href="{{serving.serving_url}}">
+                                        <span class="fa fa-external-link"></span>
+                                        {{serving.name}}
+                                    </a>
+                                </div>
+                                
+                                <div class="description col-xs-5">
+                                    {{serving.description}}
+                                </div>
+                                
+                                <div class="col-xs-2">
+                                    {{serving.calories}}
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </li>
         </ul>
     </div>
-</div> 
+    
+    <div class="syf-loader" ng-hide="!isSearching">
+        <div class="fa fa-circle-o-notch fa-spin fa-4x"></div>
+    </div>
+</div>
