Final update for Jeff and team. What a ride...

--- a/www/less/core.less
+++ b/www/less/core.less
@@ -66,15 +66,9 @@ body {
       }
     }
     
-    .syf-loader {
-      //background: #e8e8e8;
-      //z-index: 100;
-      //top: 50%;
-      
-      div {
-        color: #FFF;
-        margin: 0 45%;
-      }
+    .syf-loader div {
+      color: #FFF;
+      margin: 0 auto;
     }
   }
 }
