--- a/www/less/login.less
+++ b/www/less/login.less
@@ -1,4 +1,13 @@
 form.login-wrapper {
+  .warning {
+    width: 80%;
+    margin: 1em auto;
+    background: #FFF;
+    border: thick solid #ffff00;
+    color: #000;
+    text-align: center;
+  }
+  
   .vr {
     display: inline;
     height: 100%;
