--- a/www/partials/Location/nutrition-links.html
+++ b/www/partials/Location/nutrition-links.html
@@ -20,6 +20,12 @@
                     Farmers Market
                 </a>
             </li>
+            
+            <li class="row">
+                <a href="#/exercise/calorie-counter" class="col-xs-12">
+                    Calorie Counter
+                </a>
+            </li>
         </ul>
     </nav>
 </div>
