--- a/www/partials/Dashboard.html
+++ b/www/partials/Dashboard.html
@@ -1,33 +1,33 @@
 <div class="dash-wrapper" ng-controller="DashboardCtrl">
     
-    <div class="row stats well">
+    <div class="row stats well" ng-hide="!EnsureValidUser()">
         <div class="col-xs-4">
-            <h3 ng-bind="calories"></h3>
-            <h5>Calories Burned</h5>
+            <h3>{{calories | number}}</h3>
+            <h5>Calories Consumed</h5>
         </div>
         <div class="col-xs-4">
-            <h3 ng-bind="steps"></h3>
+            <h3>{{steps | number}}</h3>
             <h5>Steps Taken</h5>
         </div>
         <div class="col-xs-4">
-            <h3 ng-bind="consumed"></h3>
-            <h5>Calories Consumed</h5>
+            <h3>{{netCal | number}}</h3>
+            <h5>Net Calories</h5>
         </div>
     </div>
     
     
     <div class="row utilities">
         <div class="col-xs-4">
-            <a href="#/exercise" class="util">
-                <span class="fa fa-5x fa-bicycle"></span>
-                <h4>Move</h4>
+            <a href="#/nutrition" class="util">
+                <span class="fa fa-5x fa-cutlery"></span>
+                <h4>Eat Better</h4>
             </a>
         </div>
         
         <div class="col-xs-4">
-            <a href="#/nutrition" class="util">
-                <span class="fa fa-5x fa-cutlery"></span>
-                <h4>Eat Better</h4>
+            <a href="#/exercise" class="util">
+                <span class="fa fa-5x fa-bicycle"></span>
+                <h4>Move More</h4>
             </a>
         </div>
         
