--- a/www/partials/Login/login.html
+++ b/www/partials/Login/login.html
@@ -1,4 +1,8 @@
 <form class="login-wrapper row" name="credentials" ng-controller="LoginCtrl">
+    <div class="message-wrapper warning well-sm" ng-hide="!message">
+        {{message}}
+    </div>
+    
     <div class="col-xs-8">
         <label for="username" class="sr-only">Username</label>
         <input id="username" type="text" class="form-control" placeholder="Username" ng-model="credentials.username" />
