--- a/www/partials/Market/search.html
+++ b/www/partials/Market/search.html
@@ -1,23 +1,22 @@
 <div ng-controller="MarketCtrl" class="market-wrapper">
-    <form name="frm" role="form" ng-submit="doSearch()">
+    <form name="frm" role="form" ng-submit="doSearch()" class="search-input">
         <label for="zip" class="sr-only">Enter Zip Code:</label>
         <input id   = "zip"
                name = "zip"
                type = "text"
                placeholder = "Enter a zip code.."
-               ng-keydown  = "watchKeys($event)"
                ng-model    = "query"
         />
     
-        <button name="zipSubmit" type="submit">Submit</button>
+        <button name="zipSubmit" class="well-sm" type="submit">Submit</button>
     </form>
     
-    <div class="search-results well">
-        <h4 ng-show="resultSet.length > 0">Results</h4>
+    <div class="search-results" ng-show="resultSet.length > 0">
+        <h4>Results</h4>
         
-        <ul class="results">
+        <ul class="results well">
             <li class="result" ng-repeat="mkt in resultSet" ng-class-even="'list-alt'">
-                <div class="title-wrapper row">
+                <div class="title-wrapper row" ng-click="mkt.show_details = !mkt.show_details" ng-init="mkt.show_details = false">
                     <div class="distance col-xs-2">
                         {{mkt.distance}} mi
                     </div>
@@ -27,53 +26,47 @@
                     </div>
                     
                     <div class="arrow col-xs-1">
-                        <span class="fa fa-arrow-right"></span>
+                        <span class="fa fa-arrow-right" ng-class="{'fa-arrow-right': !mkt.show_details, 'fa-arrow-down': mkt.show_details}"></span>
                     </div>
                 </div>
                 
-                <div class="additional-details" ng-init="times = mkt.Schedule.split(';')">
-                    <div class="schedule" ng-if="mkt.Schedule" ng-repeat="time in times">
-                        {{time | StripTags}}
+                <div class="additional-details" ng-show="mkt.show_details"> <!--ng-init="times = mkt.Schedule.split(';')" -->
+                    <div class="schedule" ng-if="mkt.Schedule" ng-repeat="(key, value) in times" ng-init="times = mkt.Schedule.split(';')">
+                        {{value | StripTags}}
+                        
                     </div>
                     
-                    <div class="products">
-                        {{mkt.Products}}
+                    <div class="products row" ng-if="mkt.Products.trim().length">
+                        <div class="col-xs-offset-1"></div>
+                        <div class="col-xs-2">
+                            Products
+                        </div>
+                        <div class="col-xs-9">{{mkt.Products}}</div>
                     </div>
                     
-                    <div class="address">
-                        {{mkt.Address}}
+                    <div class="address row">
+                        <div class="col-xs-offset-1"></div>
+                        <div class="col-xs-2">
+                            Address
+                        </div>
+                        <div class="col-xs-9">
+                            <a onclick="OpenMap(mkt);">
+                                {{mkt.Address}}
+                            </a>
+                        </div>
                     </div>
                     
+                    <!--
                     <div class="google">
                         {{mkt.GoogleLink}}
                     </div>
+                    -->
                 </div>
             </li>
         </ul>
     </div>
+    
+    <div class="syf-loader text-center" ng-hide="!isSearching">
+        <div class="fa fa-circle-o-notch fa-spin fa-5x"></div>
+    </div>
 </div>
-
-<!--
-
-Address
-	"2800 N Lincoln Blvd., Ok...a City, Oklahoma, 73105"
-	
-GoogleLink
-	"http://maps.google.com/?...FF)+Farmers'+Market%22)"
-	
-Products
-	"Cheese and/or dairy prod... immediate consumption)"
-	
-Schedule
-	"January to December Tue:12:00 PM - 5:30 PM; "
-	
-distance
-	"1.8"
-	
-id
-	1001389
-	
-marketname
-	"Oklahoma Dept. of Agricu...ODAFF) Farmers' Market "
-
--->
