--- a/www/partials/Nutrition/lookup.html
+++ b/www/partials/Nutrition/lookup.html
@@ -67,7 +67,7 @@
                                 </div>
                                 
                                 <div class="col-xs-2">
-                                    Calories
+                                    Cal.
                                 </div>
                             </li>
                             
@@ -94,7 +94,7 @@
         </ul>
     </div>
     
-    <div class="syf-loader" ng-hide="!isSearching">
-        <div class="fa fa-circle-o-notch fa-spin fa-4x"></div>
+    <div class="syf-loader text-center" ng-hide="!isSearching">
+        <div class="fa fa-circle-o-notch fa-spin fa-5x"></div>
     </div>
 </div>
