--- a/www/less/app-nav.less
+++ b/www/less/app-nav.less
@@ -26,6 +26,10 @@ div.app-nav-wrapper {
         margin: 0;
         text-align: center;
       }
+      
+      .loggedIn {
+        color: lightgreen;
+      }
     }
   }
 }
